# q2tools-220_BISP

./: .editorconfig  CMakeLists.txt  q2tools-BIMAP.code-workspace  q2tools.code-workspace
src/: bi_texture.c  bi_texture.h  bsp.c  bspfile.c  buildnum.h  images.c  lightmap.c  main.c  map.c  patches.c  qbsp.h  qfiles.h  qrad.h  rad.c  strtools.c  strtools.h  tex_wad3.c  tex_wad3.h  textures.c  vis.c  writebsp.c
